# CPP3_BrickGame_v2.0-1

./: CMakeLists.txt  Makefile  documentation.md  run.sh
brick_game/snake/: snake_tests.cpp  snakegame_back.c  snakegame_back.h
brick_game/tetris/: tetris_back.c  tetris_back.h  tetris_back_desktop.c  tetris_back_desktop.h  tetris_main.c  tetris_tests.c
gui/cli/: tetris_front.c  tetris_front.h
gui/desktop/: main.cpp  snakegame.cpp  snakegame.h  startwindow.cpp  startwindow.h  tetriswindow.cpp  tetriswindow.h
